--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,7 @@ button {
 /* Attēla sadaļa ar tekstu */
 .image {
   flex: 1;
-  background-image: linear-gradient(#0056b3, #007bff);
-  /* background: url("assets/images/lab-background.jpg") no-repeat center center; */
+  background-image: linear-gradient(#0056b3, #71b4fc);
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -53,6 +52,7 @@ button {
 .image img {
   width: 250px;
   bottom: 10px;
+  background: radial-gradient(circle at 50% 50%, #fff 0%, #fff 60%, #fff0 calc(50% + 1px))
 }
 
 /* Galvenās lapas sadaļa */
@@ -325,6 +325,13 @@ form input {
 .database td {
   padding: 12px 15px;
   text-align: center;
+  width: auto;
+}
+tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+  box-sizing: border-box;
 }
 
 .database td {
@@ -332,8 +339,20 @@ form input {
 }
 
 .database th {
+  position: sticky;
   background-color: #272c46;
   color: #fff;
+}
+
+thead {
+  display: table;
+  width: calc(100%);
+}
+
+tbody {
+  display: block;
+  max-height: 240px;
+  overflow-y: scroll;
 }
 
 .database tbody tr:nth-child(even) {
@@ -352,14 +371,12 @@ form input {
   font-weight: bold;
 }
 
-/* Optional: Style the first column (ID) */
 .database td:last-child,
 .database th:last-child {
   text-align: start;
   width: 120px;
 }
 
-/* Style for empty cells */
 .database td:empty {
   background-color: #f9f9f9;
 }
@@ -368,15 +385,4 @@ form input {
   padding: 7px 20px;
   border-radius: 0;
   border: none;
-}
-
-/* Media queries */
-@media (max-width: 768px) {
-  .wrapper {
-    flex-direction: column;
-  }
-
-  .image {
-    height: 50vh;
-  }
 }
